--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,12 @@
     "useDefineForClassFields": false,
     "paths": {
       "@app/*": ["./src/app/*"],
-      "@core/*": ["./src/app/config/*"],
-      "@features/*": ["./src/app/components/*"],
-      "@pages/*": ["./src/app/pages/*"],
-      "@shared/*": ["./src/app/shared/*"]
+      "@core/*": ["./src/app/core/*"],
+      "@features/*": ["./src/app/features/*"],
+      "@shared/*": ["./src//app/shared/*"]
     },
     "lib": [
-      "ES2022",
+      "ESNEXT",
       "dom"
     ]
   },
