--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles/index.sass"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles/abstract"
+              ]
+            }
           },
           "configurations": {
             "production": {
@@ -93,9 +98,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles/index.sass"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles/abstract"
+              ]
+            }
           }
         },
         "lint": {
